# ZombieDice

./: CMakeLists.txt  README.md
include/: confirm.h  dice.h  game.h  gen.h  initialinput.h  player.h  tube.h  turn.h  welcome.h
src/: confirm.cpp  dice.cpp  game.cpp  initialinput.cpp  main.cpp  tube.cpp  turn.cpp  welcome.cpp
